# GlGameEngine

./: CMakeLists.txt  mygame  readme.md
assets/: level1.lst
assets/level1/: a.out  cube.3d  cubw.3d  cubx.3d  floor.3d  gun.3d
include/: camera.h  collitions.h  engine.h  object.h  renderer.h  transform.h
shaders/: basic.vert  }
src/: a.out  camera.c  collitions.c  engine.c  main.c  object.c  renderer.c  transform.c
